hphp/hack/test/typecheck/re_prefixed_string/prefixed_string_enum_values.php
<?hh

enum PatternEnum: HH\Lib\Regex\Pattern<shape(...)> as string {
  SIMPLE = re'/simple/';
}
